# kinectAR_updated

./: .gitignore  CMakeLists.txt  Makefile.am  calib.xml  params.txt  paramskinect.txt
executables/: CMakeLists.txt  detectMarker.cpp  detectMarker2.cpp
include/: GlutViewer.h  config.h  cparams.h  imageReceiver.h  kinectAR.h  kinectMarker.h
src/: GlutViewer.cpp  imageReceiver.cpp  kinectAR.cpp  kinectMarker.cpp  receive.cpp  streampic.cpp
